# orbtrace

./: .gitignore  .gitmodules  CONTRIBUTORS  COPYING  ORIGINS.md  README.md  REQUIREMENTS  icebreaker_builder.py  orbtrace_builder.py  orbtrace_builder_amaranth.py  orbtrace_builder_nmigen.py  orbtrace_util.py  pyproject.toml
.github/workflows/: build.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  performance.odp
hw/bob/: bob-rescue.lib  sym-lib-table
liblitehyperbus/: Makefile  hyperram.c  hyperram.h
nmigen/: cmsis_dap.py  cmsis_test.py  orbtrace_builder.py
orbtrace/: cdc_acm.py  crg_ecp5.py  dfu.py  dma8b.py  flash_modules.py  flash_uid.py  flashwriter.py  git_version.py  glitch.py  hyperram.py  led_ctrl.py  reset.py  serial_led.py  soc.py  stream.py  test_io.py  usb_allocator.py  usb_mem_bridge.py  usb_serialnumber.py
orbtrace/amaranth/: cmsis_dap.py  cmsis_test.py  dbgIF.py  orbtrace_platform_ecp5.py  traceIF.py
orbtrace/amaranth_glue/: cmsis_dap.py  dfu.py  luna.py  usb_mem_bridge.py  wrapper.py
orbtrace/debug/: __init__.py  cmsis_dap.py  cmsis_dap_wrapper.py  dbgIF.py  dbgIF_wrapper.py
orbtrace/microsoft_wcid/: README.md  __init__.py
orbtrace/nmigen/: cmsis_dap.py  cmsis_test.py  dbgIF.py  orbtrace_platform_ecp5.py
orbtrace/nmigen_glue/: cmsis_dap.py  dfu.py  luna.py  usb_mem_bridge.py  wrapper.py
orbtrace/power/: usb_handler.py
orbtrace/trace/: __init__.py  cobs.py  core.py  swo.py  (+5 more)
src/: dbgIF.v  swdIF.v
stimfiles/: slowitm.csv
support/: makecount.py  muleboard.ocd
tests/: sim_helpers.py  test_cobs.py  test_stream_utils.py  test_swo.py  test_tpiu.py
verilog/: dbgIF.v  jtagIF.v  swdIF.v  traceIF.v
(+19 files in other folders)
